...
                                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                        <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                                        <state key="normal" title="Link Project">
                                                            <color key="titleColor" white="0.25" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                                                        </state>
...
                                                </constraints>
                                            </view>
                                            <textField opaque="NO" clipsSubviews="YES" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Title..." textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="sUw-1U-UU6">
                                                <rect key="frame" x="0.0" y="80" width="375" height="60"/>
                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
...
                                                </connections>
                                            </textField>
                                            <textField opaque="NO" clipsSubviews="YES" tag="3" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Subtitle..." textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="lNA-Zp-nmH">
                                                <rect key="frame" x="0.0" y="160" width="375" height="60"/>
                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
...
                                                </connections>
                                            </textField>
                                            <textField opaque="NO" clipsSubviews="YES" tag="4" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Inspector..." textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Obn-kq-sf3">
                                                <rect key="frame" x="0.0" y="240" width="375" height="60"/>
                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
...
                                                </connections>
                                            </textField>
                                            <textField opaque="NO" clipsSubviews="YES" tag="5" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Inspection number..." textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="C33-00-dkE">
                                                <rect key="frame" x="0.0" y="320" width="375" height="60"/>
                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
...
                                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                        <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                                        <state key="normal" title="Inspection Start Date">
                                                            <color key="titleColor" white="0.25" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                                                        </state>
...
                                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                        <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                                        <state key="normal" title="Inspection End Date">
                                                            <color key="titleColor" white="0.25" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                                                        </state>
...
                                        </constraints>
                                        <fontDescription key="fontDescription" type="system" weight="medium" pointSize="20"/>
                                        <state key="normal" title="Create Inspection">
                                            <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                        </state>
...
                            </constraints>
                        </view>
                        <barButtonItem key="rightBarButtonItem" title="Save" id="6A1-H0-jbC">
                            <connections>
                                <action selector="saveTapped:" destination="gL0-0A-G6s" id="2iB-z0-t9C"/>
...
